# sg-reader

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: basic.rs  custom_reader.rs  exporter.rs  summarise.rs  verify.rs  viewer.rs
src/: error.rs  image_builder.rs  lib.rs  sg_bitmap.rs  sg_file.rs  sg_image.rs  utils.rs
